# craft

./: .gitignore  .kanban.json  .migration_report.json  README.md  WORKFLOW.md  audit.py  craft-audit-report-v2.md  craft-audit-report.md  kanban.py  monitor.py  pyproject.toml  run_tests.py  test_all.py  test_regression.py
craft/: __init__.py  __main__.py  config.py  tui_mini.py
craft/cli/: __init__.py  agent_cmd.py  bootstrap.py  cmd.py  db_cmd.py  debug.py  heap.py  logo.py  models_cmd.py  providers_cmd.py  serve_cmd.py  session_cmd.py  upgrade.py
craft/config/: __init__.py  console_state.py  error.py  formatter.py  keybinds.py  load.py  managed.py  mcp.py  parse.py  paths.py  settings.py
craft/core/: __init__.py  account.py  acp.py  actor.py  agent.py  agent_generate.py  auth.py  bus.py  clipboard.py  command.py  compaction.py  control_plane.py  cron.py  effect.py  enterprise.py  env.py  file_op.py  flag.py  format_mgr.py  git_integration.py  global_state.py  history.py  id.py  ide.py  inbox.py  installation.py  lsp.py  mcp_protocol.py  memory.py  metrics.py  model_group.py  npm.py  patch.py  permission.py  plugin.py  project.py  provider.py  pty.py  question.py  server.py  (+19 more)
craft/core/actor/: __init__.py  core.py  events.py  group.py  registry.py  return_header.py  (+5 more)
craft/tui/: __init__.py  attach.py  components.py  config_panel.py  context.py  dialogs.py  event.py  home.py  i18n.py  layer.py  permission.py  plugin_system.py  prompt.py  remaining.py  session.py  session_dialogs.py  sidebar_panels.py  spinner.py  theme.py  thread.py  tps.py  win32.py  worker.py
(+283 files in other folders)
